package com.studia.io.error;

public class InvalidDataInputEx extends Exception {
    public InvalidDataInputEx(String message) {
        super(message);
    }
}
